Tests/resources/errors/userException.pec
define name as Text attribute
define text as Text attribute

define Error as enumerated category with attributes name and text, and symbols:
	DIVIDE_BY_ZERO with "Divide by zero!" as text
	INDEX_OUT_OF_RANGE with "Index out of range!" as text
	NULL_REFERENCE with "Null reference!" as text

define UserError as enumerated Error with symbols:
	USER_ERROR_1 with "User error 1!" as text
	USER_ERROR_2 with "User error 2!" as text

define print as native method receiving Text value doing:
	Java: System.out.print(value);
	C#: System.Console.Write(value);
	Python2: print(objects=value,end="")
	Python3: print(objects=value,end="")
	JavaScript: process.stdout.write(value);

define main as method receiving Text<:> options doing:
	switch on error doing:
		s = "abcde"
		raise USER_ERROR_1
	when USER_ERROR_1:
		print error.text

